fixed some spacing that was off

--- a/src/Components/Background.css
+++ b/src/Components/Background.css
@@ -249,7 +249,7 @@
   overflow: hidden;
   max-height: 0;
   opacity: 0;
-  margin-top: 1rem;
+  margin-top: 0.3rem;
   transition: max-height 420ms ease, opacity 300ms ease 60ms;
 }
 
